# anymail-dashamail

./: README.md  pyproject.toml  send_test_email.py
anymail_dashamail/: __init__.py  backend.py
tests/: test_backend.py
